fix app shut down